--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "instargram-clone",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://jsonplaceholder.typicode.com",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^7.15.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
+    "react-instagram-embed": "^1.5.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
